--- a/The Number e.tex
+++ b/The Number e.tex
@@ -127,7 +127,7 @@
 	\end{proof}
 
 	\bigskip\bigskip\bigskip
-	\subsubsection{\texorpdfstring{$e^x$}{e to the power x}}
+	\subsubsection{\texorpdfstring{$e^x$}{e to the power x}}\label{sssection:e-to-the-power-x}
 	\bigskip
 	Taking the limit definition of $e$ (definition (i)) and raising it to the power of $x$, by (vi) of \autoref{theo:func-limit-properties}, we have
 	\[ e^x = \left[\lim_{n \to \infty} \left(1 + \frac{1}{n}\right)^n\right]^x = \lim_{n \to \infty} \left(1 + \frac{1}{n}\right)^{xn}. \]
