--- a/Algebra.tex
+++ b/Algebra.tex
@@ -7,7 +7,8 @@
 
 \begin{document}
 
-\searchableChapter{Algebra}{abstract algebra, complex numbers}
+\searchableChapter{Algebra}{abstract algebra, complex numbers} 
+\TODO{change the name here}
 
 	\searchableSection{Group Theory}{abstract algebra}
 	
@@ -1562,13 +1563,13 @@
 		so that we may define a law of composition such that ${ aH * bH = abH }$ which closes over the set of cosets of $H$. The identity element of this composition is ${ eH = H }$ and the inverse of the element $aH$ is ${ \inv{a}H }$.
 		
 		\note{Note that this \textbf{only} applies to normal subgroups. The reason is that if $H$ is not normal then there exists ${ h \in H }$ and ${ a \in G }$ such that ${ ah\inv{a} \not\in H }$ which means that ${ S = aH\inv{a}H }$ is not in any coset.\\
-			This last claim can be proven if we observe -- remembering that cosets partition the group -- that $S$ contains ${ a1\inv{a}1 = 1 }$ which means that it has to be in $H$. However, $S$ also contains ${ ah\inv{a}1 = ah\inv{a} \not\in H }$ so, since these are equivalence classes, $S$ cannot be in $H$.
+			This last claim can be proven if we observe -- remembering that cosets partition the group -- that $S$ contains ${ a1\inv{a}1 = 1 }$ which means that it has to be in $H$ (\TODO{in the kernel?}). However, $S$ also contains ${ ah\inv{a}1 = ah\inv{a} \not\in H }$ so, since these are equivalence classes, $S$ cannot be in $H$.
 		}
 		
 		\bigskip
 		\subsubsection{Quotient Groups}\label{subsubsection:Quotient Groups}
 		\boxeddefinition{
-			Suppose $H$ is a normal subgroup of a group $G$. Then the quotient group ${ G/N }$ is the set of cosets of $N$ in $G$ with the coset product. Its order is the index of $N$ in $G$, ${ [G : N] }$.
+			Suppose $N$ is a normal subgroup of a group $G$. Then the quotient group ${ G/N }$ is the set of cosets of $N$ in $G$ with the coset product. Its order is the index of $N$ in $G$, ${ [G : N] }$.
 		}
 	
 		\notation{Sometimes -- when it is not necessary to specify the subgroup against which the cosets are being formed -- the set of cosets in $G$ is denoted $\overline{G}$  and a member coset ${ aH }$ is denoted ${ \overline{a} \in \overline{G} }$.}
