--- a/MathsNotesBase.tex
+++ b/MathsNotesBase.tex
@@ -95,6 +95,7 @@
 \newcommand{\wrong}{\begingroup\color{red}\text{Wrong!}\endgroup}
 \newcommand{\TODO}[1]{\textcolor{blue}{\small{\underline{TODO:} #1}}}
 \newcommand{\addref}{\TODO{add reference}}
+\newcommand{\references}[1]{\small \textit{references:} #1}
 
 \DeclarePairedDelimiterX\setc[2]{\{}{\}}{\,#1 \,\;\delimsize\vert\;\, #2\,}
 \DeclareRobustCommand{\N}[1]{\mathbb{N}^{#1}}
@@ -181,6 +182,23 @@
 		}%
 	}\bigskip
 }
+
+\newcommand{\framed}[1]{\noindent\fbox{%
+		\parbox{\textwidth}{%
+			#1	
+		}%
+	}\bigskip
+}
+
+\newcommand{\boxedaxiom}[1]{\framed{
+			\begin{axiom}
+				#1
+			\end{axiom}	
+		}
+}
+
+
+
 
 \newcommand{\note}[1]{
 	\begin{tcolorbox}[breakable,enhanced jigsaw,colback=note_bg,boxrule=0pt,arc=0pt]
